@@ -3880,11 +3880,27 @@ SEXP attribute_hidden do_isseekable(SEXP call, SEXP op, SEXP args, SEXP env)
     return ScalarLogical(con->canseek != FALSE);
 }
 
+static void checkClose(Rconnection con)
+{
+    if (con->isopen)
+    {
+        errno = 0;
+        con->close(con);
+        if (con->status != NA_INTEGER && con->status < 0)
+        {
+            int serrno = errno;
+            if (serrno)
+                warning(_("Problem closing connection:  %s"), strerror(serrno));
+            else
+                warning(_("Problem closing connection"));
+        }
+    }
+}
+
 static int con_close1(Rconnection con)
 {
     int status;
-    if (con->isopen)
-        con->close(con);
+    checkClose(con);
     status = con->status;
     if (con->isGzcon)
     {
@@ -4135,8 +4151,7 @@ int Rconn_printf(Rconnection con, const char *format, ...)
 static void con_cleanup(void *data)
 {
     Rconnection con = data;
-    if (con->isopen)
-        con->close(con);
+    checkClose(con);
 }
 
 /* readLines(con = stdin(), n = 1, ok = TRUE, warn = TRUE) */
@@ -4376,7 +4391,7 @@ SEXP attribute_hidden do_writelines(SEXP call, SEXP op, SEXP args, SEXP env)
     if (!wasopen)
     {
         endcontext(&cntxt);
-        con->close(con);
+        checkClose(con);
     }
     return R_NilValue;
 }
@@ -5093,7 +5108,7 @@ SEXP attribute_hidden do_writebin(SEXP call, SEXP op, SEXP args, SEXP env)
     if (!wasopen)
     {
         endcontext(&cntxt);
-        con->close(con);
+        checkClose(con);
     }
     if (isRaw)
     {
@@ -5491,7 +5506,7 @@ SEXP attribute_hidden do_writechar(SEXP call, SEXP op, SEXP args, SEXP env)
     if (!wasopen)
     {
         endcontext(&cntxt);
-        con->close(con);
+        checkClose(con);
     }
     if (isRaw)
     {
@@ -5682,8 +5697,10 @@ static Rboolean switch_or_tee_stdout(int icon, int closeOnExit, int tee)
             {
                 Rconnection con = getConnection(icon);
                 R_ReleaseObject(con->ex_ptr);
-                if (SinkConsClose[R_SinkNumber + 1] == 1) /* close it */
-                    con->close(con);
+                if (SinkConsClose[R_SinkNumber + 1] == 1)
+                { /* close it */
+                    checkClose(con);
+                }
                 else if (SinkConsClose[R_SinkNumber + 1] == 2) /* destroy it */
                     con_destroy(icon);
             }
